[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/map_test.tscn" type="PackedScene" id=2]
[ext_resource path="res://game.gd" type="Script" id=3]
[ext_resource path="res://entities/npc/npc.tscn" type="PackedScene" id=4]
[ext_resource path="res://menus.gd" type="Script" id=1]
[ext_resource path="res://main.gd" type="Script" id=5]
[ext_resource path="res://menus/title.tscn" type="PackedScene" id=6]
[ext_resource path="res://menus/settings.tscn" type="PackedScene" id=7]

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="Game" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Player" parent="Game" instance=ExtResource( 1 )]
position = Vector2( 631, 530 )
[node name="Menus" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TimerGunCooldown" type="Timer" parent="Game/Player"]
process_mode = 0
wait_time = 0.1
one_shot = true
[node name="MainMenu" parent="Menus" instance=ExtResource( 6 )]

[node name="Enemies" type="Node2D" parent="Game"]

[node name="Npc" parent="Game/Enemies" instance=ExtResource( 4 )]
position = Vector2( 1075, 443 )

[node name="Npc2" parent="Game/Enemies" instance=ExtResource( 4 )]
position = Vector2( 353, 617 )

[node name="Map" parent="Game" instance=ExtResource( 2 )]

[node name="Settings" parent="Menus" instance=ExtResource( 7 )]
visible = false

[node name="Networking" type="Node" parent="."]

[connection signal="shoot_projectile" from="Game/Player" to="Game" method="_on_shoot_projectile"]
[connection signal="timeout" from="Game/Player/TimerGunCooldown" to="Game" method="_on_TimerCooldown_timeout"]
[connection signal="settings_menu" from="Menus/MainMenu" to="Menus" method="_on_MainMenu_settings_menu"]
[connection signal="start_game" from="Menus/MainMenu" to="." method="_on_MainMenu_start_game"]
[connection signal="settings_back" from="Menus/Settings" to="Menus" method="_on_Settings_settings_back"]
